--- a/requirements.txt
+++ b/requirements.txt
@@ -1,50 +1,12 @@
-beautifulsoup4==4.14.3
-blinker==1.9.0
-certifi==2026.1.4
-cffi==2.0.0
-charset-normalizer==3.4.4
-click==8.3.1
-curl_cffi==0.13.0
-Flask==3.0.3
-Flask-Caching==2.3.0
-APScheduler==3.10.4
-frozendict==2.4.7
-gunicorn==22.0.0
-html5lib==1.1
-idna==3.11
-itsdangerous==2.2.0
-Jinja2==3.1.6
-joblib==1.5.3
-llvmlite==0.44.0
-lxml==6.0.2
-MarkupSafe==3.0.3
-multitasking==0.0.12
-nltk==3.9.2
-numba==0.61.2
-numpy==2.2.6
-packaging==26.0
-pandas==3.0.0
-pandas-ta==0.4.71b0
-peewee==3.19.0
-platformdirs==4.5.1
-plotly==5.22.0
-protobuf==6.33.5
-pyarrow==19.0.0
-pycparser==3.0
-python-dateutil==2.9.0.post0
-python-dotenv==1.2.1
-pytz==2025.2
-regex==2026.1.15
-requests==2.32.5
-six==1.17.0
-soupsieve==2.8.3
-tenacity==9.1.4
-textblob==0.18.0.post0
-tqdm==4.67.3
-typing_extensions==4.15.0
-urllib3==2.6.3
-webencodings==0.5.1
-websockets==16.0
-Werkzeug==3.1.5
-yfinance==0.2.54
-# Cache breaker: mar. 10 févr. 2026 10:15:00 CET
+Flask
+Flask-Caching
+pandas
+pandas_ta
+yfinance>=0.2.40
+requests
+plotly
+textblob
+apscheduler
+python-dotenv
+gunicorn
+sqlite3-api
